; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/crypt32/extr_msg.c_CRYPT_CopyCMSSignerInfo.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/crypt32/extr_msg.c_CRYPT_CopyCMSSignerInfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_15__ = type { i32, i32, %struct.TYPE_16__, %struct.TYPE_17__, %struct.TYPE_17__, %struct.TYPE_14__, i32 }
%struct.TYPE_16__ = type { i64 }
%struct.TYPE_17__ = type { %struct.TYPE_11__, i64 }
%struct.TYPE_11__ = type { i64 }
%struct.TYPE_14__ = type { i64, %struct.TYPE_13__ }
%struct.TYPE_13__ = type { %struct.TYPE_16__, %struct.TYPE_12__ }
%struct.TYPE_12__ = type { %struct.TYPE_16__, %struct.TYPE_16__ }

@.str = private unnamed_addr constant [14 x i8] c"(%p, %d, %p)\0A\00", align 1
@CERT_ID_ISSUER_SERIAL_NUMBER = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@ERROR_MORE_DATA = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [14 x i8] c"returning %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64*, %struct.TYPE_15__*)* @CRYPT_CopyCMSSignerInfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CRYPT_CopyCMSSignerInfo(i8* %0, i64* %1, %struct.TYPE_15__* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca %struct.TYPE_15__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca %struct.TYPE_15__*, align 8
  store i8* %0, i8** %4, align 8
  store i64* %1, i64** %5, align 8
  store %struct.TYPE_15__* %2, %struct.TYPE_15__** %6, align 8
  store i64 88, i64* %7, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load i64*, i64** %5, align 8
  %16 = load i64, i64* %15, align 8
  br label %18

17:                                               ; preds = %3
  br label %18

18:                                               ; preds = %17, %14
  %19 = phi i64 [ %16, %14 ], [ 0, %17 ]
  %20 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %21 = call i32 (i8*, i8*, ...) @TRACE(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8* %11, i64 %19, %struct.TYPE_15__* %20)
  %22 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %23 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %22, i32 0, i32 5
  %24 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* @CERT_ID_ISSUER_SERIAL_NUMBER, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %28, label %47

28:                                               ; preds = %18
  %29 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %30 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %29, i32 0, i32 5
  %31 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %30, i32 0, i32 1
  %32 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %31, i32 0, i32 1
  %33 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %32, i32 0, i32 1
  %34 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = load i64, i64* %7, align 8
  %37 = add nsw i64 %36, %35
  store i64 %37, i64* %7, align 8
  %38 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %39 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %38, i32 0, i32 5
  %40 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %39, i32 0, i32 1
  %41 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %40, i32 0, i32 1
  %42 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %41, i32 0, i32 0
  %43 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = load i64, i64* %7, align 8
  %46 = add nsw i64 %45, %44
  store i64 %46, i64* %7, align 8
  br label %56

47:                                               ; preds = %18
  %48 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %49 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %48, i32 0, i32 5
  %50 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %49, i32 0, i32 1
  %51 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %50, i32 0, i32 0
  %52 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %51, i32 0, i32 0
  %53 = load i64, i64* %52, align 8
  %54 = load i64, i64* %7, align 8
  %55 = add nsw i64 %54, %53
  store i64 %55, i64* %7, align 8
  br label %56

56:                                               ; preds = %47, %28
  %57 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %58 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %57, i32 0, i32 4
  %59 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %58, i32 0, i32 1
  %60 = load i64, i64* %59, align 8
  %61 = icmp ne i64 %60, 0
  br i1 %61, label %62, label %71

62:                                               ; preds = %56
  %63 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %64 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %63, i32 0, i32 4
  %65 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %64, i32 0, i32 1
  %66 = load i64, i64* %65, align 8
  %67 = call i64 @strlen(i64 %66)
  %68 = add nsw i64 %67, 1
  %69 = load i64, i64* %7, align 8
  %70 = add nsw i64 %69, %68
  store i64 %70, i64* %7, align 8
  br label %71

71:                                               ; preds = %62, %56
  %72 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %73 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %72, i32 0, i32 4
  %74 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %73, i32 0, i32 0
  %75 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %74, i32 0, i32 0
  %76 = load i64, i64* %75, align 8
  %77 = load i64, i64* %7, align 8
  %78 = add nsw i64 %77, %76
  store i64 %78, i64* %7, align 8
  %79 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %80 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %79, i32 0, i32 3
  %81 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %80, i32 0, i32 1
  %82 = load i64, i64* %81, align 8
  %83 = icmp ne i64 %82, 0
  br i1 %83, label %84, label %93

84:                                               ; preds = %71
  %85 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %86 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %85, i32 0, i32 3
  %87 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %86, i32 0, i32 1
  %88 = load i64, i64* %87, align 8
  %89 = call i64 @strlen(i64 %88)
  %90 = add nsw i64 %89, 1
  %91 = load i64, i64* %7, align 8
  %92 = add nsw i64 %91, %90
  store i64 %92, i64* %7, align 8
  br label %93

93:                                               ; preds = %84, %71
  %94 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %95 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %94, i32 0, i32 3
  %96 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %95, i32 0, i32 0
  %97 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %96, i32 0, i32 0
  %98 = load i64, i64* %97, align 8
  %99 = load i64, i64* %7, align 8
  %100 = add nsw i64 %99, %98
  store i64 %100, i64* %7, align 8
  %101 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %102 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %101, i32 0, i32 2
  %103 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %102, i32 0, i32 0
  %104 = load i64, i64* %103, align 8
  %105 = load i64, i64* %7, align 8
  %106 = add nsw i64 %105, %104
  store i64 %106, i64* %7, align 8
  %107 = load i64, i64* %7, align 8
  %108 = call i64 @ALIGN_DWORD_PTR(i64 %107)
  store i64 %108, i64* %7, align 8
  %109 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %110 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %109, i32 0, i32 1
  %111 = call i64 @CRYPT_SizeOfAttributes(i32* %110)
  %112 = load i64, i64* %7, align 8
  %113 = add nsw i64 %112, %111
  store i64 %113, i64* %7, align 8
  %114 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %115 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %114, i32 0, i32 0
  %116 = call i64 @CRYPT_SizeOfAttributes(i32* %115)
  %117 = load i64, i64* %7, align 8
  %118 = add nsw i64 %117, %116
  store i64 %118, i64* %7, align 8
  %119 = load i8*, i8** %4, align 8
  %120 = icmp ne i8* %119, null
  br i1 %120, label %125, label %121

121:                                              ; preds = %93
  %122 = load i64, i64* %7, align 8
  %123 = load i64*, i64** %5, align 8
  store i64 %122, i64* %123, align 8
  %124 = load i32, i32* @TRUE, align 4
  store i32 %124, i32* %8, align 4
  br label %223

125:                                              ; preds = %93
  %126 = load i64*, i64** %5, align 8
  %127 = load i64, i64* %126, align 8
  %128 = load i64, i64* %7, align 8
  %129 = icmp slt i64 %127, %128
  br i1 %129, label %130, label %136

130:                                              ; preds = %125
  %131 = load i64, i64* %7, align 8
  %132 = load i64*, i64** %5, align 8
  store i64 %131, i64* %132, align 8
  %133 = load i32, i32* @ERROR_MORE_DATA, align 4
  %134 = call i32 @SetLastError(i32 %133)
  %135 = load i32, i32* @FALSE, align 4
  store i32 %135, i32* %8, align 4
  br label %222

136:                                              ; preds = %125
  %137 = load i8*, i8** %4, align 8
  %138 = bitcast i8* %137 to i32*
  %139 = getelementptr inbounds i32, i32* %138, i64 88
  store i32* %139, i32** %9, align 8
  %140 = load i8*, i8** %4, align 8
  %141 = bitcast i8* %140 to %struct.TYPE_15__*
  store %struct.TYPE_15__* %141, %struct.TYPE_15__** %10, align 8
  %142 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %143 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %142, i32 0, i32 6
  %144 = load i32, i32* %143, align 8
  %145 = load %struct.TYPE_15__*, %struct.TYPE_15__** %10, align 8
  %146 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %145, i32 0, i32 6
  store i32 %144, i32* %146, align 8
  %147 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %148 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %147, i32 0, i32 5
  %149 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %148, i32 0, i32 0
  %150 = load i64, i64* %149, align 8
  %151 = load %struct.TYPE_15__*, %struct.TYPE_15__** %10, align 8
  %152 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %151, i32 0, i32 5
  %153 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %152, i32 0, i32 0
  store i64 %150, i64* %153, align 8
  %154 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %155 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %154, i32 0, i32 5
  %156 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %155, i32 0, i32 0
  %157 = load i64, i64* %156, align 8
  %158 = load i64, i64* @CERT_ID_ISSUER_SERIAL_NUMBER, align 8
  %159 = icmp eq i64 %157, %158
  br i1 %159, label %160, label %183

160:                                              ; preds = %136
  %161 = load %struct.TYPE_15__*, %struct.TYPE_15__** %10, align 8
  %162 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %161, i32 0, i32 5
  %163 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %162, i32 0, i32 1
  %164 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %163, i32 0, i32 1
  %165 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %164, i32 0, i32 1
  %166 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %167 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %166, i32 0, i32 5
  %168 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %167, i32 0, i32 1
  %169 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %168, i32 0, i32 1
  %170 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %169, i32 0, i32 1
  %171 = call i32 @CRYPT_CopyBlob(%struct.TYPE_16__* %165, %struct.TYPE_16__* %170, i32** %9)
  %172 = load %struct.TYPE_15__*, %struct.TYPE_15__** %10, align 8
  %173 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %172, i32 0, i32 5
  %174 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %173, i32 0, i32 1
  %175 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %174, i32 0, i32 1
  %176 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %175, i32 0, i32 0
  %177 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %178 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %177, i32 0, i32 5
  %179 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %178, i32 0, i32 1
  %180 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %179, i32 0, i32 1
  %181 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %180, i32 0, i32 0
  %182 = call i32 @CRYPT_CopyBlob(%struct.TYPE_16__* %176, %struct.TYPE_16__* %181, i32** %9)
  br label %193

183:                                              ; preds = %136
  %184 = load %struct.TYPE_15__*, %struct.TYPE_15__** %10, align 8
  %185 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %184, i32 0, i32 5
  %186 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %185, i32 0, i32 1
  %187 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %186, i32 0, i32 0
  %188 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %189 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %188, i32 0, i32 5
  %190 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %189, i32 0, i32 1
  %191 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %190, i32 0, i32 0
  %192 = call i32 @CRYPT_CopyBlob(%struct.TYPE_16__* %187, %struct.TYPE_16__* %191, i32** %9)
  br label %193

193:                                              ; preds = %183, %160
  %194 = load %struct.TYPE_15__*, %struct.TYPE_15__** %10, align 8
  %195 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %194, i32 0, i32 4
  %196 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %197 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %196, i32 0, i32 4
  %198 = call i32 @CRYPT_CopyAlgorithmId(%struct.TYPE_17__* %195, %struct.TYPE_17__* %197, i32** %9)
  %199 = load %struct.TYPE_15__*, %struct.TYPE_15__** %10, align 8
  %200 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %199, i32 0, i32 3
  %201 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %202 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %201, i32 0, i32 3
  %203 = call i32 @CRYPT_CopyAlgorithmId(%struct.TYPE_17__* %200, %struct.TYPE_17__* %202, i32** %9)
  %204 = load %struct.TYPE_15__*, %struct.TYPE_15__** %10, align 8
  %205 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %204, i32 0, i32 2
  %206 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %207 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %206, i32 0, i32 2
  %208 = call i32 @CRYPT_CopyBlob(%struct.TYPE_16__* %205, %struct.TYPE_16__* %207, i32** %9)
  %209 = load i32*, i32** %9, align 8
  %210 = call i32* @POINTER_ALIGN_DWORD_PTR(i32* %209)
  store i32* %210, i32** %9, align 8
  %211 = load %struct.TYPE_15__*, %struct.TYPE_15__** %10, align 8
  %212 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %211, i32 0, i32 1
  %213 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %214 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %213, i32 0, i32 1
  %215 = call i32 @CRYPT_CopyAttributes(i32* %212, i32* %214, i32** %9)
  %216 = load %struct.TYPE_15__*, %struct.TYPE_15__** %10, align 8
  %217 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %216, i32 0, i32 0
  %218 = load %struct.TYPE_15__*, %struct.TYPE_15__** %6, align 8
  %219 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %218, i32 0, i32 0
  %220 = call i32 @CRYPT_CopyAttributes(i32* %217, i32* %219, i32** %9)
  %221 = load i32, i32* @TRUE, align 4
  store i32 %221, i32* %8, align 4
  br label %222

222:                                              ; preds = %193, %130
  br label %223

223:                                              ; preds = %222, %121
  %224 = load i32, i32* %8, align 4
  %225 = sext i32 %224 to i64
  %226 = inttoptr i64 %225 to i8*
  %227 = call i32 (i8*, i8*, ...) @TRACE(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i8* %226)
  %228 = load i32, i32* %8, align 4
  ret i32 %228
}

declare dso_local i32 @TRACE(i8*, i8*, ...) #1

declare dso_local i64 @strlen(i64) #1

declare dso_local i64 @ALIGN_DWORD_PTR(i64) #1

declare dso_local i64 @CRYPT_SizeOfAttributes(i32*) #1

declare dso_local i32 @SetLastError(i32) #1

declare dso_local i32 @CRYPT_CopyBlob(%struct.TYPE_16__*, %struct.TYPE_16__*, i32**) #1

declare dso_local i32 @CRYPT_CopyAlgorithmId(%struct.TYPE_17__*, %struct.TYPE_17__*, i32**) #1

declare dso_local i32* @POINTER_ALIGN_DWORD_PTR(i32*) #1

declare dso_local i32 @CRYPT_CopyAttributes(i32*, i32*, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
